# data-structures-from-scratch

./: CMakeLists.txt  readme.md
src/semana1/: pointer.cpp
src/semana2/classes/: time_main.cpp
src/semana2/fila/: queue_main.cpp
src/semana2/pilha/: stack.h  stack_main.cpp  stack_vector.cpp
src/semana3/: mainLinkedList.cpp  queueLinkedList.cpp  queueLinkedList.h  stackLinkedList.cpp  stackLinkedList.h
src/semana4/: hash.h
src/semana5/: aluno_tree.h  search_tree.cpp  search_tree.h
src/semana6/: Aluno6.cpp  aluno_tree6.cpp  aluno_tree6.h  aluno_tree_avl.cpp  aluno_tree_avl.h  avl_search_tree.cpp  search_tree6.cpp  search_tree6.h  search_tree_aplicacao6.cpp  search_tree_aplicacao_avl.cpp  search_tree_avl.cpp  search_tree_avl.h
src/semana7/: queue_encadeado.cpp
src/week1/: pointer.cpp
src/week2/classes/: time.cpp  time.h  time_main.cpp
src/week2/fila/: queue.cpp  queue.h
src/week2/pilha/: item_type.h  stack_main.cpp
src/week3/: mainLinkedList.cpp  node_type.h
src/week4/: aluno.cpp  aluno.h  basic.cpp  hash_application.cpp
src/week5/: aluno_tree.cpp  search_tree_aplicacao.cpp
src/week6/: Aluno6.h  avl_search_tree.h  avl_search_tree_aplicacao.cpp
src/week7/: Queue7.h  graph.cpp  graph.h  graph_pagerank.cpp  node_type.h
